--- a/gb/20/8/20/n12345038.md
+++ b/gb/20/8/20/n12345038.md
@@ -1,72 +1,64 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>长照专车幸福领航 接驳山区长者到社区互动</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/08/455861-600x400.jpg" />
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/08/455861-600x400.jpg" />///image2=```diff
+- 竹山地区第一部由政府机关申请的长照2.0接驳专车，8月19日在镇公所广场举行通车典礼。（黄淑贞／大纪元）
+```
 <h6>竹山地区第一部由政府机关申请的长照2.0接驳专车，8月19日在镇公所广场举行通车典礼。（黄淑贞／大纪元）
 </h6>
 <hr>
-<p>【大纪元2020年08月20日讯】（大纪元记者林萌骞台湾南投报导）竹山地区第一部由政府机关申请的长照2.0<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%8E%A5%E9%A9%B3%E4%B8%93%E8%BD%A6.md#1">接驳专车</a>，19日在镇公所广场举行通车典礼，将于9月1日起正式上路，为竹山镇清水溪畔8个社区的长者们提供接驳服务。</p>
-<p>为了让社区长者能克服<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%B1%B1%E5%8C%BA.md#1">山区</a>交通不便，走出家门到社区互动，并让各偏远山区社区共享社福资源，镇公所在行政院中办执行长蔡培慧协助下，争取到卫服部长照山区<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%8E%A5%E9%A9%B3%E4%B8%93%E8%BD%A6.md#1">接驳专车</a>，将从下个月起接送长者们去社区参与活动。</p>
+<p>【大纪元2020年08月20日讯】（大纪元记者林萌骞台湾南投报导）竹山地区第一部由政府机关申请的长照2.0接驳专车，19日在镇公所广场举行通车典礼，将于9月1日起正式上路，为竹山镇清水溪畔8个社区的长者们提供接驳服务。</p>
+<p>为了让社区长者能克服山区交通不便，走出家门到社区互动，并让各偏远山区社区共享社福资源，镇公所在行政院中办执行长蔡培慧协助下，争取到卫服部长照山区接驳专车，将从下个月起接送长者们去社区参与活动。</p>
 <p>上午的通车典礼，包括中办执行长、县籍立委、县议员、镇代表、里长、社区人士、县府社会及劳动处长等来宾，都前来参与，表达对长照和社区长辈的关心，也希望能继续争取到第二部、第三部，满足长辈方便外出的需求。</p>
-<figure id="12345045" aria-describedby="caption-12345045" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/08/b65c9ef82401c0ef6906141398bfb9c0-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2020/08/b65c9ef82401c0ef6906141398bfb9c0-450x300.jpg" alt="与会来宾试乘接驳专车。" width="500" /></a><figcaption id="caption-12345045" class="wp-caption-text">与会来宾试乘接驳专车。（黄淑贞／大纪元）</figcaption></figure>
-<figure id="12345044" aria-describedby="caption-12345044" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/08/26054de14c2a79a374f8f7b453e57f50-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2020/08/26054de14c2a79a374f8f7b453e57f50-450x300.jpg" alt="卫福部专门委员杨雅岚致词。" width="500" /></a><figcaption id="caption-12345044" class="wp-caption-text">卫福部专门委员杨雅岚致词。（黄淑贞／大纪元）</figcaption></figure>
-<figure id="12345042" aria-describedby="caption-12345042" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/08/bb579081eafe0d6c82a92aee68236d83-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2020/08/bb579081eafe0d6c82a92aee68236d83-450x300.jpg" alt="接驳专车将于9月1日起正式上路，受惠的竹山镇清水溪畔偏远社区的代表合影。" width="500" /></a><figcaption id="caption-12345042" class="wp-caption-text">接驳专车将于9月1日起正式上路，受惠的竹山镇清水溪畔偏远社区的代表合影。（黄淑贞／大纪元）</figcaption></figure>
-<p>镇长陈东睦表示，2年前，蔡总统到地方巡视时，就向她反映偏乡民众的需求，后来又再向卫福部长反映民众的心声，2年后终于能落实政府对偏远<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%B1%B1%E5%8C%BA.md#1">山区</a>长照2.0的照顾，解决他们由家里出发前往社区参加活动的问题。</p>
+<figure id="12345045" aria-describedby="caption-12345045" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/08/b65c9ef82401c0ef6906141398bfb9c0-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2020/08/b65c9ef82401c0ef6906141398bfb9c0-450x300.jpg" alt="与会来宾试乘接驳专车。" width="500" /></a><figcaption id="caption-12345045" class="wp-caption-text">与会来宾试乘接驳专车。（黄淑贞／大纪元）</figcaption></figure>
+<figure id="12345044" aria-describedby="caption-12345044" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/08/26054de14c2a79a374f8f7b453e57f50-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2020/08/26054de14c2a79a374f8f7b453e57f50-450x300.jpg" alt="卫福部专门委员杨雅岚致词。" width="500" /></a><figcaption id="caption-12345044" class="wp-caption-text">卫福部专门委员杨雅岚致词。（黄淑贞／大纪元）</figcaption></figure>
+<figure id="12345042" aria-describedby="caption-12345042" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/08/bb579081eafe0d6c82a92aee68236d83-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2020/08/bb579081eafe0d6c82a92aee68236d83-450x300.jpg" alt="接驳专车将于9月1日起正式上路，受惠的竹山镇清水溪畔偏远社区的代表合影。" width="500" /></a><figcaption id="caption-12345042" class="wp-caption-text">接驳专车将于9月1日起正式上路，受惠的竹山镇清水溪畔偏远社区的代表合影。（黄淑贞／大纪元）</figcaption></figure>
+<p>镇长陈东睦表示，2年前，蔡总统到地方巡视时，就向她反映偏乡民众的需求，后来又再向卫福部长反映民众的心声，2年后终于能落实政府对偏远山区长照2.0的照顾，解决他们由家里出发前往社区参加活动的问题。</p>
 <p>目前规划的接驳车服务范围，包含桶头、瑞竹、坪顶、鲤鱼、福兴、德兴、大鞍、车店仔等8个社区。</p>
 <p>至于接驳的民众，包括：1. 长照管理中心评估可搭乘的长者、2. 聘请外籍看护工提供照顾的失能长者、3. 使用住宿式机构服务的失能者、4. 实施区域的65岁以上老人或55岁以上的原住民等。</p>
 <p>镇公所规划的路线有三条，路线一：主线每周一至周五由起点站镇公所出发沿线接送至终点站桶头社区，再由桶头出发至坪顶、鲤鱼、鲤南等三支线社区，单程接送至桶头上课共餐，下课再沿线依序送返，最后车辆回公所。</p>
 <p>路线二：每周一由公所出发至福兴里载送至福田社区照顾关怀据点。路线三：每周二由桶头出发至坪顶里载送至坪顶社区照顾关怀据点。</p>
 <p>陈东睦说，本次接驳专车幸福领航最主要的目的，是照顾偏远山区长照2.0的长者。目前山区社区大部分都未能施行一周五天的社区关怀，有了接驳车，长辈们就可以每天都去路线上的社区上课，使生活过得更多采多姿。</p>
-<p style="text-align: center;"><a src=""></a><a href="https://d1d4q9enzm2lz3.cloudfront.net/D3sAtKA5e"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/15EsuC0WlXo" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
-<p style="text-align: center;"><a src=""></a><a href="https://d1d4q9enzm2lz3.cloudfront.net/D3sAtKA5e"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/rq97dIvfWgY" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
+<p style="text-align: center;"><a loading="lazy" src=""></a><a href="https://d2agd1dsojkgmu.cloudfront.net/I2wAtKA5b"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/15EsuC0WlXo" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
+<p style="text-align: center;"><a loading="lazy" src=""></a><a href="https://d2agd1dsojkgmu.cloudfront.net/I2wAtKA5b"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/rq97dIvfWgY" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
 <p>责任编辑：王愉悦</p>
-
 <hr>
-<hr>
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/17/3/24/n8962605.md#1">爱的转运站起跑 长辈出门社交运动防失智</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/17/9/21/n9654292.md#1">因应高龄化社会  台医界长照业者齐出力</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/17/10/24/n9764621.md#1">失智症伴跑台湾元年 苗县不缺席</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/19/3/5/n11089962.md#1">桃园高中职博览会 38校9、10日展特色课程</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/19/11/19/n11666163.md#1">国际狮子会捐赠交通车 长者就医及学童接送</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/2/5/n11846080.md#1">苗县府未来施政计划 宣誓同心协力使命必达</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/4/28/n12067503.md#1">屏东小黄公车逆势成长   年底加推潮州东港</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/12/n13971400.md#1">前山石友会雅石展示 大自然不再允许珍宝</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/25/n13958365.md#1">林荣宏绘画不倒翁 致力结合大自然引发共鸣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957064.md#1">台湾竹艺日元年 凝聚力量建立在地认同与归属</a></li>
-<hr>
-
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/17/3/24/n8962605.md#1">爱的转运站起跑 长辈出门社交运动防失智</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/17/9/21/n9654292.md#1">因应高龄化社会  台医界长照业者齐出力</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/17/10/24/n9764621.md#1">失智症伴跑台湾元年 苗县不缺席</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/5/n11089962.md#1">桃园高中职博览会 38校9、10日展特色课程</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/19/11/19/n11666163.md#1">国际狮子会捐赠交通车 长者就医及学童接送</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/2/5/n11846080.md#1">苗县府未来施政计划 宣誓同心协力使命必达</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/4/28/n12067503.md#1">屏东小黄公车逆势成长   年底加推潮州东港</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/16/n14331243.md#1">小黄山甜根子草花海盛开 邀您共襄盛举！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/12/n14328937.md#1">孤老穷病苦待援  彰化分署中秋送暖助难关</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/5/n14324724.md#1">伸港3姊弟车祸 姊姊住院197天不治</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/4/n10360803.md#1" target="_blank">共产暴政录：统购统销洗劫中国农民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/30/n11488663.md#1" target="_blank">寻获生命真谛 法国医院院长分享修炼感悟</a></li><hr>
-
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/11/n11180163.md#1" target="_blank">【征文】章阁：中国古代专制吗（下）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/12/11/n8581915.md#1" target="_blank">76岁中医求道40年终获至宝 发乌黑身如燕</a></li><hr>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/6/n13989274.md#1">【未解之谜】“美梦”成真？！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/26/n13981899.md#1">【杨延昭传奇】“潘湖浊，杨湖清” 天意明辨忠与奸</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/4/n13987863.md#1">中华传统母亲花是哪一种？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/10/n13969696.md#1">【古道人生】同是卖泥丸 何以一个能治病一个医死人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/17/n13931544.md#1">【医案】迅雷不及掩耳</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/10/n13993177.md#1">【时事金扫描】普京阅兵缩水 台海兵演结果惨烈</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/10/n13993094.md#1">【新闻大家谈】不止惹翻加国 习或面临惊涛骇浪</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/10/n13993340.md#1">【秦鹏观察】成都警方发掌掴视频 习为雄安辩护</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/9/n13991795.md#1">岳山：中南海可能曾因脱贫造假发生内讧</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/9/n13992253.md#1">中共报复性驱逐加外交官 特鲁多强硬回应</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/9/n13991876.md#1">北京顶级豪宅项目爆雷 75套豪宅被抵押</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/9/n13992355.md#1">遭传转移8亿资产到美国 金马影帝徐峥回应</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/8/n13991550.md#1">曾任邓丽君经纪人 资深娱乐人管伟华病逝</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/8/n13991678.md#1">微博头像已换 工作室改名 杨幂离开老东家</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/10/n13992600.md#1">黎姿每天步行1万步 获赞“身材宛如少女”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/8/n13991615.md#1">藏族导演万玛才旦猝逝 电影《塔洛》曾获金马奖</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/8/n13991180.md#1">白袜变黑很恶心 专家教你如何让它洁白如新</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/28/n13983839.md#1">黑胡椒抗癌 黄芪缓解哮喘 10种顶级草药激活免疫力</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/8/n13990965.md#1">除了房地产 哪些投资可以避险又增值？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/4/n13988093.md#1">胃酸逆流可引发癌前病变 防食道癌要记住这5点</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/9/n13991762.md#1">4个信号是肾脏在求救 医师：护肾这7件事很重要</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/4/n14344260.md#1">《清明上河图》化身乐高模型 打破世界纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14341736.md#1">《千字文》——传世奇文，国学瑰宝</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14341684.md#1">贞观圣主（10）：指鸟为鸾 正诛佞人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/28/n14340380.md#1">人生如戏岂堪嗟 —— 评电影《进京城》</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/8/6/1/n2138665.md#1">善有善报，拖久了还付利息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346853.md#1">【财经非常道】美非农报告亮眼 降息降多了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345864.md#1">【新闻大破解】十月惊奇在中东 以色列打台湾牌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346731.md#1">【神韵早期节目】除妖（2018年制作）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/3/n14343180.md#1">三款SUV秋季或大幅涨价 含畅销车丰田RAV4</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/6/n14345122.md#1">红三代炫富：过生日奶奶给1.8亿 存款逾24亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345627.md#1">中国经济大萧条 大量实体店十一门庭冷落</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14346019.md#1">投资3亿 刘德华新片《危机航线》或亏2亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345927.md#1">那英澳门开唱遇冷 “十一”说成“五一”惹议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345357.md#1">韩剧《冬季恋歌》电影版 明年秋天在日本上映</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346747.md#1">《狮子吼》“十一”档上映 2人观影 票房79元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346417.md#1">《派遣女医X》以电影版落幕 米仓凉子感性落泪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/6/n14344945.md#1">这一物可以让水龙头闪闪发光 你可能想不到</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345615.md#1">如何去除家庭头号害虫——蟑螂？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/30/n14341564.md#1">苦瓜抗癌预防脂肪肝 一类人慎食</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/28/n14145199.md#1">长者自救锻炼法 逆转骨质疏松</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346769.md#1">秋季宜多吃“白色”食物 按三阴交穴保健</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/20/n12345038.htm">长照专车幸福领航 接驳山区长者到社区互动</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/20/8/20/n12345038.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/20/n12345038.htm">长照专车幸福领航 接驳山区长者到社区互动</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/20/8/20/n12345038.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
